k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-my-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
